# glassview

./: .gitignore  LICENSE  README.md  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
