[package]
name = "glassview"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
# Downgraded to 0.29 to match the Ext trait syntax in main.rs
sysinfo = "0.29"
